--- a/erp-manager-web/.settings/org.eclipse.wst.common.component
+++ b/erp-manager-web/.settings/org.eclipse.wst.common.component
@@ -7,6 +7,9 @@
         <dependent-module archiveName="erp-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/erp-common/erp-common">
             <dependency-type>uses</dependency-type>
         </dependent-module>
+        <dependent-module archiveName="erp-manager-pojo-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/erp-manager-pojo/erp-manager-pojo">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="erp-manager-web"/>
         <property name="java-output-path" value="/erp-manager-web/target/classes"/>
     </wb-module>
