--- a/erp-manager/erp-manager-service/.settings/org.eclipse.wst.common.component
+++ b/erp-manager/erp-manager-service/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,9 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="erp-common-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/erp-common/erp-common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="erp-manager-service"/>
         <property name="java-output-path" value="/erp-manager-service/target/classes"/>
     </wb-module>
